syntax = "proto3";

package task;




message TaskReq{
    string id = 1;
    string name = 2;
    string deadline = 3;
    string summary = 4;
    string assigne_id = 5;
    string status = 6;
    string created_at = 7;
    string updated_at = 8;
    string deleted_at = 9;
    User user =10;
}


message TaskRes{
    string name =1;
    string deadline =2;
    string summary =3;
    string status =4;
    string assignee_id =5;
    User user =6;
    
}

message User{
    string first_name = 1;
    string last_name = 2;
    string username = 3;
    string profile_photo = 4;
    string bio = 5;
    string email = 6;
    string gender = 7;
    repeated Adress adress = 8;
    repeated Phone phone_numbers = 9;
}
message ByUserId{
    string user_id = 1;
}

message ById{
    string TaskId = 1;
}


message Adress{
    string name = 1;
}

message Mess{
    string message = 1;
}

message Phone {
    string name = 1; 
}

message ListTasks{
    repeated TaskReq tasks = 1;
    int64 count = 2;
}